# Smart-Money-Dump-Hunter-Bot

./: .env.live  .gitignore  Dockerfile  README.md  docker-compose.staging.yml  docker-compose.yml  dump_to_parquet.py  prometheus.yml  pyproject.toml  stats.json
.github/workflows/: export-pnl.yml  live-guard.yml  stack-boot.yml
deploy/systemd/: orchestrator.service
docker/: grafana-dashboard.json  prometheus.yml
docs/: CHAOS_RUNBOOK.md  DEPLOY_LIVE.md
env/: .env.live.example  .env.staging.example
grafana/provisioning/: dashboard-latency.json
scripts/: export_parquet.py
scripts/chaos/: cpu-spike.sh  kill-redis.ps1  kill-redis.sh
src/cli/: config_cli.py
src/ops/: export_pnl.py
src/smartmoney_bot/: exporter.py
src/smartmoney_bot/alert/: alertbot.py  telegram.py
src/smartmoney_bot/backtest/: sim.py
src/smartmoney_bot/collector/: __init__.py  binance_ws.py  collector_service.py  config.py  redispub.py  universe.py
src/smartmoney_bot/common/: async_utils.py  config.py
src/smartmoney_bot/exec/: gateway.py
src/smartmoney_bot/metrics/: buffer.py  config.py  formulas.py  metric_engine.py
src/smartmoney_bot/orchestrator/: engine.py
src/smartmoney_bot/risk/: killswitch.py  manager.py
src/smartmoney_bot/strategy/: core.py
src/tuner/: engine.py
tests/: test_alert_mock.py  test_backtest.py  test_collector.py  test_config_cli.py  test_env_live.py  test_export_pnl.py  test_gateway_paper.py  test_killswitch.py  test_metrics.py  test_metrics_parquet.py  test_orchestrator.py  test_prometheus.py  test_prometheus_endpoint.py  test_risk.py  test_stack_health.py  test_strategy.py  test_tuner.py
tests/fixtures/: coingecko_top50.json
