[project]
name = "smartmoney-bot"
version = "0.1.0"
description = "Smart-Money Dump-Hunter"
authors = [
    {name = "OpenAI Codex"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "aioredis (>=2.0,<3.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ccxt (>=4.4.97,<5.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "pandas (>=2.2.2,<3.0.0)",
    "numba (>=0.59.1,<1.0.0)",
    "asyncpg (>=0.29.0,<1.0.0)",
    "prometheus-client (>=0.20.0,<1.0.0)"
    ,"typer (>=0.12,<1.0)"
    ,"PyYAML (>=6.0,<7.0)"
    ,"optuna (>=3.6.0,<4.0.0)"
    ,"plotly (>=5.20,<6.0)"
    ,"pyarrow (>=15.0,<16.0)"
]

[tool.poetry]
package-mode = true
packages = [
    { include = "smartmoney_bot", from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
types-redis = "*"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
black = "^25.1.0"
ruff = "^0.12.7"
mypy = "^1.17.1"
pytest-benchmark = "^4.0.0"
fakeredis = "^2.23.2"
types-PyYAML = "^6.0.12"

